--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="lib/fancybox/jquery.fancybox.css">
+  <!--[if lte IE 8]><script src="js/respond.js"></script><![endif]-->
 
 </head>
 
