Device-pixel-ration

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="lib/fancybox/jquery.fancybox.css">
   <!--[if lte IE 8]><script src="js/respond.js"></script><![endif]-->
 
+  <meta name="viewport" content="width=device-width">
+
 </head>
 
 <body>
